fix: adjust gap in experience item header and update container max-width for better responsiveness

--- a/src/components/MainContent.css
+++ b/src/components/MainContent.css
@@ -9,13 +9,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-}
 
-@media (max-width: 500px) {
-    .container {
-        width: 100vh;
+    @media (max-width: 500px) {
+        max-width: 80%;
     }
 }
+
 
 .presentation {
     display: flex;
