--- a/src/components/TechItem.css
+++ b/src/components/TechItem.css
@@ -6,6 +6,6 @@
 }
 
 .tech-item-container img {
-    width: 42px;
-    height: 42px;
+    width: 60px;
+    height: 60px;
 }
